# screenhistory

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  schema.sql
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: 0002_optimize_storage.sql  0003_tune_storage.sql
crates/core/src/: db.rs  export.rs  ingest.rs  lib.rs
crates/core/src/models/: mod.rs  rows.rs
examples/: test_viz.rs
migrations/: 0001_init.sql  0001_schema.sql
screenhistory/: db.swift  screenhistoryApp.swift  syncManager.swift  test.py
scripts/: make_sanitized_fixture.py
src/: db.rs  export.rs  ingest.rs  lib.rs  main.rs  paths.rs  tui.rs
src/models/: mod.rs  rows.rs
src/viz/: aggregator.rs  mod.rs
tests/: export_filters.rs  sanitized_fixture_sync.rs
tests/fixtures/: knowledgeC.sanitized.db
