[package]
name = "screenhistory"
version = "0.1.0"
edition = "2021"
description = "Core library for ScreenHistory: schema, migrations, ingest from Apple Screen Time DB, and exports."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Wybxc/screenhistory"
readme = "README.md"

[dependencies]
# SQLite (sqlx, async)
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Time handling (epoch seconds in DB; format/parse on edges)
time = { version = "0.3", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }

# Serialization for exports and potential IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# Paths and locating user dirs (e.g., ~/.screenhistory.sqlite)
directories = "6.0.0"

# Error handling and logging
anyhow = "1"
futures-util = "0.3"

# CLI args
clap = { version = "4.5", features = ["derive"] }

# Error handling and logging
env_logger = { version = "0.11", default-features = false, features = [
    "auto-color",
] }

[profile.release]
lto = true
codegen-units = 1
