[package]
name = "screenhistory-core"
version = "0.1.0"
edition = "2021"
description = "Core library for ScreenHistory: schema, migrations, ingest from Apple Screen Time DB, and exports."
license = "MIT OR Apache-2.0"
repository = "https://example.com/your/repo"
readme = "README.md"

[lib]
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# SQLite (sqlx, async)
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Time handling (epoch seconds in DB; format/parse on edges)
time = { version = "0.3", features = [
    "formatting",
    "parsing",
    "macros",
    "serde",
] }

# Serialization for exports and potential IPC
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"

# IDs and some optional fields
uuid = { version = "1", features = ["serde", "v4"] }

# Paths and locating user dirs (e.g., ~/.screenhistory.sqlite)
directories = "5"

# Error handling and logging
thiserror = "1"
anyhow = "1"
log = "0.4"
futures-util = "0.3"

[features]
default = []
# Enable sqlx offline compile-time checks against a database URL or .sqlx data
offline = []

[package.metadata.docs.rs]
all-features = true
